--- a/.eslintrc
+++ b/.eslintrc
@@ -26,12 +26,26 @@
         }
     },
     "rules": {
-        "indent": "off",
         "max-len": "off",
         "no-unsafe-innerhtml/no-unsafe-innerhtml": 2,
         "no-unused-vars": 2,
         "@typescript-eslint/explicit-module-boundary-types": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "semi": [
+            "error",
+            "always"
+        ],
+        "indent": [
+            "error",
+            2
+        ],
+        "no-multi-spaces": [
+            "error"
+        ]
     },
     "extends": [
         "eslint:recommended",
