--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,19 @@
 {
-    "globals": {},
     "plugins": [
         "react",
-        "@typescript-eslint",
         "no-unsafe-innerhtml",
         "promise"
     ],
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
-        "ecmaVersion": 12,
+        "requireConfigFile": false,
         "sourceType": "module",
+        "allowImportExportEverywhere": true,
         "ecmaFeatures": {
-            "jsx": true,
-            "generators": true,
-            "experimentalObjectRestSpread": true
+            "globalReturn": false
+        },
+        "babelOptions": {
+            "configFile": "./.babelrc"
         }
     },
     "env": {
@@ -22,20 +22,48 @@
     },
     "settings": {
         "react": {
-            "version": ""
+            "version": "17.0.2"
         }
     },
     "rules": {
         "indent": "off",
         "max-len": "off",
         "no-unsafe-innerhtml/no-unsafe-innerhtml": 2,
-        "no-unused-vars": 2,
-        "@typescript-eslint/explicit-module-boundary-types": "off",
-        "react/prop-types": "off"
+        "no-unused-vars": [
+            "error",
+            {
+                "ignoreRestSiblings": false
+            }
+        ],
+        "react/prop-types": "off",
+        "object-curly-spacing": [
+            "error",
+            "always"
+        ],
+        "react/jsx-equals-spacing": [
+            2,
+            "never"
+        ],
+        // "react/jsx-handler-names": [
+        //     2,
+        //     {
+        //         "eventHandlerPrefix": "_",
+        //         "eventHandlerPropPrefix": "off"
+        //     }
+        // ],
+        "react/jsx-pascal-case": [
+            2,
+            {
+                "allowAllCaps": true,
+                "ignore": []
+            }
+        ],
+        "react/require-render-return": 2,
+        "space-before-function-paren": "off"
     },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
-        "plugin:@typescript-eslint/recommended"
+        "react-app"
     ]
 }
