--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "babel-preset-react": "^6.24.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
     "sass": "^1.43.2",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
