added svgs as js files and sorted some config stuff

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "trailingComma": "none",
     "arrowParens": "avoid",
     "semi": true,
-    "tabWidth": 2
+    "proseWrap": "preserve",
+    "printWidth": 100
 }
