--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
+    "immer": "^9.0.6",
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "nth-check": "^2.0.1",
     "pnp-webpack-plugin": "1.6.4",
     "prompts": "2.4.0",
     "react": "^17.0.2",
