--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "dependencies": {
     "@babel/core": "^7.13.0",
     "@babel/preset-react": "^7.14.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@svgr/webpack": "5.5.0",
+    "@svgr/webpack": "^6.1.2",
+    "ansi-regex": "^6.0.1",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.7",
@@ -46,7 +46,7 @@
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
-    "immer": "^9.0.6",
+    "immer": "^9.0.7",
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
@@ -56,7 +56,7 @@
     "prompts": "2.4.0",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^11.0.3",
+    "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.1",
     "react-refresh": "^0.8.3",
@@ -72,8 +72,8 @@
     "terser-webpack-plugin": "4.2.3",
     "url-loader": "4.1.1",
     "web-vitals": "^1.1.2",
-    "webpack": "4.44.2",
-    "webpack-dev-server": "3.11.1",
+    "webpack": "^5.65.0",
+    "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "5.1.4"
   },
