--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "pnp-webpack-plugin": "1.6.4",
     "prompts": "2.4.0",
     "react": "^17.0.2",
+    "react-app": "^1.1.2",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
