--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "css-loader": "4.3.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "eslint-config-react-app": "^7.0.0",
     "file-loader": "6.1.1",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
@@ -87,11 +88,10 @@
     "eslint-webpack-plugin": "^2.5.2",
     "@babel/eslint-parser": "^7.15.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-no-unsafe-innerhtml": "^1.0.16",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
-    "eslint-config-prettier": "8.3.0",
     "husky": "4.0.7",
     "lint-staged": "^11.2.3",
     "prettier": "^2.3.2"
