--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "scripts": {
-    "start": "node scripts/start.js",
-    "lint": "node_modules/.bin/eslint \"src/**/*\"",
-    "lint:fix": "node_modules/.bin/eslint --fix --ignore-pattern *.scss",
-    "lint-staged": "lint-staged",
+    "start": "webpack-dev-server --mode development",
+    "prettier:all": "node_modules/.bin/prettier --write \"src/**/*\"",
+    "lint": "node_modules/.bin/eslint \"src/**/*.js\" -c .eslintrc.js --ignore-path .gitignore",
+    "lint:fix": "npm run lint -- --fix",
+    "lint:eslint:fix": "eslint --ignore-path .gitignore --fix",
     "precommit": "npm run lint-staged",
-    "prettier:all": "node_modules/.bin/prettier --write \"src/**/*.{js,scss}\""
+    "lint-staged": "lint-staged"
   },
   "husky": {
     "hooks": {
@@ -16,134 +18,51 @@
     }
   },
   "lint-staged": {
-    "src/**/*": [
+    "src": [
       "npm run prettier:all",
-      "npm run lint:fix"
+      "npm run lint:fix",
+      "git add"
     ]
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Alicee5cha/ReactPortfolio"
   },
+  "bugs": {
+    "url": "https://github.com/Alicee5cha/ReactPortfolio/issues"
+  },
   "dependencies": {
-    "@babel/core": "^7.13.0",
-    "@babel/preset-react": "^7.14.5",
-    "@svgr/webpack": "^6.1.2",
-    "ansi-regex": "^6.0.1",
-    "babel-jest": "^26.6.0",
-    "babel-loader": "8.1.0",
-    "babel-plugin-named-asset-import": "^0.3.7",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^10.0.0",
-    "bfj": "^7.0.2",
-    "camelcase": "^6.1.0",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "css-loader": "4.3.0",
-    "dotenv": "8.2.0",
-    "dotenv-expand": "5.1.0",
-    "file-loader": "6.1.1",
-    "fs-extra": "^9.0.1",
-    "html-webpack-plugin": "4.5.0",
-    "identity-obj-proxy": "3.0.0",
-    "immer": "^9.0.7",
-    "jest": "26.6.0",
-    "jest-circus": "26.6.0",
-    "jest-resolve": "26.6.0",
-    "jest-watch-typeahead": "0.6.1",
-    "nth-check": "^2.0.1",
-    "pnp-webpack-plugin": "1.6.4",
-    "prompts": "2.4.0",
-    "react": "^17.0.2",
-    "react-app": "^1.1.2",
-    "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^12.0.0",
-    "react-dom": "^17.0.2",
-    "react-intersection-observer": "^8.32.1",
-    "react-refresh": "^0.8.3",
-    "react-router-dom": "^5.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hot-loader": "^4.13.0",
+    "react-intersection-observer": "^8.33.1",
+    "react-router-dom": "^6.2.1",
     "react-scroll": "^1.8.4",
-    "resolve": "1.18.1",
-    "resolve-url-loader": "^3.1.2",
-    "sass": "^1.43.2",
-    "sass-loader": "^10.0.5",
-    "semver": "7.3.2",
-    "style-loader": "1.3.0",
-    "styled-components": "^5.3.3",
-    "terser-webpack-plugin": "4.2.3",
-    "url-loader": "4.1.1",
-    "web-vitals": "^1.1.2",
-    "webpack": "^5.65.0",
-    "webpack-dev-server": "^4.6.0",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.4"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-webpack-plugin": "^2.5.2",
-    "@babel/eslint-parser": "^7.15.0",
-    "eslint": "^7.32.0",
+    "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.1.0",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "8.0.2",
+    "css-loader": "1.0.0",
+    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-no-unsafe-innerhtml": "^1.0.16",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "file-loader": "^6.2.0",
     "husky": "4.0.7",
-    "lint-staged": "^11.2.3",
-    "prettier": "^2.3.2"
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "testRunner": "C:\\Users\\my-na\\Documents\\websites\\react\\ReactPortfolio\\node_modules\\jest-circus\\runner.js",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
+    "lint-staged": "8.2.1",
+    "prettier": "^2.5.1",
+    "sass": "^1.45.1",
+    "sass-loader": "10.1.1",
+    "style-loader": "0.23.0",
+    "webpack": "4.41.2",
+    "webpack-cli": "3.1.1",
+    "webpack-dev-server": "3.9.0"
   }
 }
