--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "prettier:all": "node_modules/.bin/prettier --write \"src/**/*\"",
-    "lint": "node_modules/.bin/eslint \"src/**/*.js\" -c .eslintrc.js",
+    "lint": "eslint \"src/**/*.js\" -c .eslintrc.js",
     "lint:fix": "npm run lint -- --fix",
-    "lint:eslint:fix": "eslint --fix",
     "precommit": "npm run lint-staged",
     "lint-staged": "lint-staged"
   },
@@ -18,10 +16,8 @@
     }
   },
   "lint-staged": {
-    "src": [
-      "npm run prettier:all",
-      "npm run lint:fix",
-      "git add"
+    "*": [
+      "npm run lint:fix"
     ]
   },
   "repository": {
