--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
       "git add"
     ]
   },
-  "eslintIgnore" : ["**/*.scss"],
+  "eslintIgnore": [
+    "**/*.scss"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Alicee5cha/ReactPortfolio"
@@ -45,7 +47,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "8.0.2",
-    "css-loader": "1.0.0",
+    "css-loader": "2.0.0",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
@@ -54,13 +56,13 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
     "husky": "4.0.7",
-    "lint-staged": "8.2.1",
+    "lint-staged": "^13.0.2",
     "prettier": "^2.5.1",
     "sass": "^1.45.1",
     "sass-loader": "10.1.1",
     "style-loader": "0.23.0",
     "webpack": "4.41.2",
-    "webpack-cli": "3.1.1",
-    "webpack-dev-server": "3.9.0"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.9.0"
   }
 }
