--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "lint-staged": {
     "src/**": [
-      "npm run lint:fix",
-      "git add"
+      "npm run lint:fix"
     ]
   },
   "eslintIgnore": [
@@ -33,14 +32,13 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "npm:@hot-loader/react-dom",
     "react-intersection-observer": "^8.33.1",
     "react-router-dom": "^6.2.1",
     "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "react-hot-loader": "^4.13.0",
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.0",
     "@babel/eslint-parser": "^7.16.5",
@@ -58,6 +56,7 @@
     "husky": "4.0.7",
     "lint-staged": "^13.0.2",
     "prettier": "^2.5.1",
+    "react-hot-loader": "^4.13.0",
     "sass": "^1.45.1",
     "sass-loader": "10.1.1",
     "style-loader": "0.23.0",
