--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,4 @@
 
 {
-  "presets": ["@babel/env", "@babel/preset-react"],
-  "plugins": ["react-hot-loader/babel"]
+  "presets": ["@babel/env", "@babel/preset-react"]
 }
