--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     ]
   },
   "eslintIgnore": [
-    "**/*.scss"
+    "**/*.scss",
+    "**/*.svg"
   ],
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
     "react-router-dom": "^6.2.1",
     "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3",
+    "use-local-storage": "^2.3.6",
     "webpack": "5.0.0"
   },
   "devDependencies": {
