--- a/package.json
+++ b/package.json
@@ -10,16 +10,6 @@
     "precommit": "yarn run lint-staged",
     "lint-staged": "lint-staged"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn run precommit"
-    }
-  },
-  "lint-staged": {
-    "src/**": [
-      "yarn run lint:fix"
-    ]
-  },
   "eslintIgnore": [
     "**/*.scss",
     "**/*.svg"
@@ -32,39 +22,38 @@
     "url": "https://github.com/Alicee5cha/ReactPortfolio/issues"
   },
   "dependencies": {
-    "react": "17.0.2",
+    "react": "18.2.0",
     "react-dom": "yarn:@hot-loader/react-dom",
-    "react-intersection-observer": "^8.33.1",
-    "react-router-dom": "^6.2.1",
-    "react-scroll": "^1.8.4",
-    "styled-components": "^5.3.3",
+    "react-intersection-observer": "^9.3.5",
+    "react-is": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "react-scroll": "^1.8.7",
+    "styled-components": "^5.3.5",
     "use-local-storage": "^2.3.6",
-    "webpack": "5.0.0"
+    "webpack": "^5.73.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/core": "^7.1.0",
-    "@babel/eslint-parser": "^7.16.5",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
     "@webpack-cli/serve": "^1.7.0",
     "babel-loader": "8.0.2",
-    "css-loader": "2.0.0",
-    "eslint": "^8.5.0",
+    "css-loader": "3.0.0",
+    "eslint": "8.20.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
-    "husky": "4.0.7",
-    "lint-staged": "^13.0.2",
     "prettier": "^2.7.1",
     "react-hot-loader": "^4.13.0",
-    "sass": "^1.45.1",
-    "sass-loader": "10.1.1",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "style-loader": "0.23.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.9.2"
+    "webpack-dev-server": "4.9.3"
   }
 }
