--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "yarn:@hot-loader/react-dom",
+    "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.3.5",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -49,7 +49,6 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
     "prettier": "^2.7.1",
-    "react-hot-loader": "^4.13.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "0.23.0",
