--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --mode development",
     "lint": "eslint \"src/**/*.js\" -c .eslintrc.js",
     "lint:fix": "yarn run lint -- --fix",
+    "prettier": "prettier --write --ignore-unknown .",
     "precommit": "yarn run lint-staged",
     "lint-staged": "lint-staged"
   },
@@ -14,6 +15,18 @@
     "**/*.scss",
     "**/*.svg"
   ],
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "lint-staged": {
+    "**/*": [
+      "yarn run prettier",
+      "yarn run lint:fix"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Alicee5cha/ReactPortfolio"
@@ -22,7 +35,11 @@
     "url": "https://github.com/Alicee5cha/ReactPortfolio/issues"
   },
   "dependencies": {
-    "prettier": "^2.7.1",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.12",
+    "i18next": "^20.2.2",
+    "i18next-browser-languagedetector": "^6.1.8",
+    "i18next-http-backend": "^1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.3.5",
@@ -31,9 +48,13 @@
     "react-scroll": "^1.8.7",
     "styled-components": "^5.3.5",
     "use-local-storage": "^2.3.6",
+    "web-vitals": "^1.1.1",
     "webpack": "^5.73.0"
   },
   "devDependencies": {
+    "prettier": "^2.7.1",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "@babel/cli": "^7.18.6",
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
