--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
+    "@mui/styled-engine-sc": "^5.10.6",
     "i18next": "^20.2.2",
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-http-backend": "^1.4.4",
@@ -52,14 +53,14 @@
     "webpack": "^5.73.0"
   },
   "devDependencies": {
-    "prettier": "^2.7.1",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
     "@babel/cli": "^7.18.6",
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
     "@webpack-cli/serve": "^1.7.0",
     "babel-loader": "8.0.2",
     "css-loader": "3.0.0",
@@ -70,6 +71,9 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "0.23.0",
