--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "alicechambers",
   "version": "0.1.0",
   "private": true,
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "lint": "eslint \"src/**/*.js\" -c .eslintrc.js",
-    "lint:fix": "yarn run lint -- --fix",
+    "prepare": "husky install",
+    "lint": "npx eslint --fix .",
     "prettier": "prettier --write --ignore-unknown .",
     "precommit": "yarn run lint-staged",
     "lint-staged": "lint-staged"
@@ -23,8 +23,10 @@
   },
   "lint-staged": {
     "**/*": [
-      "yarn run prettier",
-      "yarn run lint:fix"
+      "yarn run prettier"
+    ],
+    "!(node_modules|build)/**/*.{js,tsx,jsx,ts}": [
+      "yarn run lint"
     ]
   },
   "repository": {
@@ -48,6 +50,7 @@
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
     "styled-components": "^5.3.5",
+    "typescript": "^5.1.6",
     "use-local-storage": "^2.3.6",
     "web-vitals": "^1.1.1",
     "webpack": "^5.73.0"
@@ -64,20 +67,23 @@
     "@webpack-cli/serve": "^1.7.0",
     "babel-loader": "8.0.2",
     "css-loader": "3.0.0",
-    "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "0.23.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.9.3"
+    "webpack-dev-server": "4.9.3",
+    "@typescript-eslint/parser": "^5.57.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.7"
   }
 }
