--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alicechambers",
   "version": "0.1.0",
   "private": true,
-  "main": "index.tsx",
+  "main": "./src/index.tsx",
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "prepare": "husky install",
@@ -37,14 +37,18 @@
     "url": "https://github.com/Alicee5cha/ReactPortfolio/issues"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.22.5",
+    "@babel/register": "^7.22.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
     "@mui/styled-engine-sc": "^5.10.6",
-    "i18next": "^20.2.2",
+    "file-loader": "^6.2.0",
+    "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-http-backend": "^1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.2",
     "react-intersection-observer": "^9.3.5",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -64,26 +68,25 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "@webpack-cli/serve": "^1.7.0",
     "babel-loader": "8.0.2",
     "css-loader": "3.0.0",
+    "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "file-loader": "^6.2.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.7",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "0.23.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.9.3",
-    "@typescript-eslint/parser": "^5.57.0",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "eslint": "^8.32.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.7"
+    "webpack-dev-server": "4.9.3"
   }
 }
