--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@types/react": "18",
+    "@types/react-dom": "18",
     "file-loader": "^6.2.0",
     "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^6.1.8",
@@ -54,6 +56,7 @@
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
     "styled-components": "^5.3.5",
+    "svg-url-loader": "^8.0.0",
     "typescript": "^5.1.6",
     "use-local-storage": "^2.3.6",
     "web-vitals": "^1.1.1",
